# robot-agilex-ranger_mini_v3

./: .env.example  .gitignore  HANDOFF.md  README.md  SKILL_001_transport_things.md  build.sh  kill_all.sh  robonix_manifest.no-arm.yaml  robonix_manifest.yaml  soma.yaml  start-no-arm.sh  start.sh  start_rviz2.sh  test_manifest_config.py  test_nav2_acceptance.py  test_nav2_config.py
config/: nav2_params.yaml  rtabmap_params.yaml
config/calibration/: 2d_homography.npy
rviz/: ranger_mapping.rviz  ranger_v0.1.rviz
skills/greet/: CAPABILITY.md  package_manifest.yaml  pyproject.toml  test_atlas_bridge.py  test_body_state.py  test_controller.py
skills/greet/capabilities/: cancel.v1.toml  driver.v1.toml  greet.v1.toml  status.v1.toml
skills/greet/capabilities/lib/greet/srv/: CancelGreet.srv  GetGreetStatus.srv  Greet.srv
skills/greet/greet_skill/: atlas_bridge.py  body_state.py  controller.py  detector.py  vlm.py
skills/greet/scripts/: build.sh  start.sh
urdf/: piper.urdf  ranger_mini.urdf
