[project]
name = "greet-skill"
version = "0.1.0"
description = "Passerby-greeting skill (camera + YOLO + VLM + speech)"
requires-python = ">=3.10"
dependencies = [
    "ultralytics",
    "fastmcp",
    "requests",
    "numpy",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["greet_skill*"]
